tests/error/10_skill_missing_method.mire
load kioto

pub skill Printable {
}

pub fn main: () {
    use dasu("test")
}